adding validation php file to repo

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     </section>
 
     <section id="gallery" class=my-5>
-        <div class=p y-5>
+        <div class="py-5">
             <h2 class=text-center>Gallery</h2>
         </div>
         <div class=container-fluid>
@@ -134,11 +134,11 @@
     </section>
 
     <section id="contact" class=my-5>
-        <div class=p y-5>
+        <div class="py-5">
             <h2 class=text-center>Contact Us</h2>
         </div>
         <div class="w-50 m-auto">
-            <form action="" method=POST>
+            <form action="validation.php" method=POST>
                 <div class="form-group">
                     <label>Full Name</label>
                     <input type="text" name="name" autocomplete="off" placeholder="Enter your full name" class="form-control">
@@ -155,7 +155,7 @@
                     <label>Your Message</label><br>
                     <textarea class="form-control" name="message" placeholder="Write your message/query here.."></textarea>
                 </div>
-                <button type="submit" id="button-id" class="btn btn-outline-dark">Submit</button>
+                <button type="submit" id="button-id" class="btn btn-outline-dark" name=contact_submit>Submit</button>
             </form>
         </div>
     </section>
