deleting validation php file from repo

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     <label>Your Message</label><br>
                     <textarea class="form-control" name="message" placeholder="Write your message/query here.."></textarea>
                 </div>
-                <button type="submit" id="button-id" class="btn btn-outline-dark" name=contact_submit>Submit</button>
+                <button type="submit" id="button-id" class="btn btn-outline-dark">Submit</button>
             </form>
         </div>
     </section>
