Updated dynamic year in the footer

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </section>
 
     <footer class="p-4 bg-dark text-white text-center">
-        <small>@2020: Ankita Rath</small>
+        <small id="date_year">: Ankita Rath</small>
     </footer>
 
     <script src="main.js"></script>
