Updated copyright value

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     </section>
 
     <footer class="p-4 bg-dark text-white text-center">
-        <small id="date_year">: Ankita Rath</small>
+        <small>@</small>  <small id="date_year"> </small> <small>: Ankita Rath</small>
     </footer>
 
     <script src="main.js"></script>
