--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div class=container-fluid>
             <div class=row>
                 <div class="col-lg-4 col-md-4 col-12">
-                    <img class="img-fluid img-thumbnail pb-1 z-index:1" style="width:450px; height:450px" src="images/pic1.jpg" alt="gallery_pic">
+                    <img class="img-fluid img-thumbnail pb-1" style="width:450px; height:450px" src="images/pic1.jpg" alt="gallery_pic">
                     <a href="images/pic1.jpg" class="btn btn-outline-dark mb-3" role="button" download="pic1">Download</a>
                 </div>
                 <div class="col-lg-4 col-md-4 col-12">
