--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <h2 class=text-center>Contact Us</h2>
         </div>
         <div class="w-50 m-auto">
-            <form action="index.html" method=POST>
+            <form action="#" method=POST>
                 <div class="form-group">
                     <label>Full Name</label>
                     <input type="text" name="name" autocomplete="off" placeholder="Enter your full name" class="form-control">
